--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </header>
   <main>
     <section class="video-section">
-      <video id="mainVideo" src="test.mp4" autoplay loop muted playsinline></video>
+      <div class="video-wrapper">
+        <video id="mainVideo" src="test.mp4" autoplay loop muted playsinline></video>
+      </div>
     </section>
     <section class="menu-section">
       <button class="menu-btn" data-video="기본 사용법">기본 사용법</button>
@@ -24,7 +26,7 @@
     </section>
   </main>
 
-  <!-- 팝업 영역 (처음엔 숨김) -->
+  <!-- 팝업 영역 -->
   <div class="popup" id="popup">
     <div class="popup-content">
       <div class="popup-header">
