--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>안마침대 사용가이드</title>
+  <title>3H 안마침대 사용가이드</title>
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <header>
-    <div class="title">안마침대 사용가이드</div>
+    <div class="title">3H 안마침대 사용가이드</div>
     <div class="datetime" id="datetime"></div>
   </header>
   <main>
@@ -33,7 +33,7 @@
         <span id="popup-title"></span>
         <button class="close-btn" onclick="closePopup()">×</button>
       </div>
-      <video id="popupVideo" src="test.mp4" controls autoplay muted></video>
+      <video id="popupVideo" src="test.mp4" controls autoplay></video>
     </div>
   </div>
   <script src="script.js"></script>
