--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
   </header>
   <main>
     <section class="video-section">
-      <div class="video-wrapper">
-        <video id="mainVideo" src="test.mp4" autoplay loop muted playsinline></video>
-      </div>
+      <video id="mainVideo" src="test.mp4" autoplay loop muted playsinline></video>
     </section>
     <section class="menu-section">
-      <button class="menu-btn" data-video="기본 사용법">기본 사용법</button>
-      <button class="menu-btn" data-video="부위별 사용법1">부위별 사용법1</button>
-      <button class="menu-btn" data-video="부위별 사용법2">부위별 사용법2</button>
-      <button class="menu-btn" data-video="부위별 사용법3">부위별 사용법3</button>
+      <button class="menu-btn">기본 사용법</button>
+      <button class="menu-btn">부위별 사용법1</button>
+      <button class="menu-btn">부위별 사용법2</button>
+      <button class="menu-btn">부위별 사용법3</button>
     </section>
   </main>
 
